# nmpc_walkgen

./: .gitignore  .gitmodules  classic_standalone.py  classic_vs_nmpc.py  data.json  main.py  make_movies.sh  mkudruss_nmpc.py  mkudruss_sandbox.py  nmpc_standalone.py  nmpc_traj.py  nmpc_vel_ref.py  plot.py  plot_data.py  test.py  test_SQP.py  test_write_data.py  walking_generator.py
cython/test_embedded_function/: Makefile  embedded  embedded.h
cython/test_print/: Makefile  embedded  embedded.c
cython/test_pxd/: .gitignore  Makefile  b.pyx  embedded_main.c  embedded_main.cpp  setup.py
cython3/: .gitignore  CMakeLists.txt  Makefile  embedded_main.cpp  embedded_main_class.cpp  embedded_main_online.cpp  embedded_test.cpp  nmpc_traj_py2.py  nmpc_vel_ref.pyx  nmpc_vel_ref_class.pyx  nmpc_vel_ref_online.pyx  nmpc_vel_ref_py2.py  plot_data.py  quick_test.py  script.sh  setup.py  setup_class.py  setup_online.py  setup_test.py  test.pyx
cython3/libs/: __init__.cpp  __init__.pxd  a.cpp  a.pxd  a.py  c.pxd  c.py
cython3/walking_generator/: base.py  combinedqp.py  interpolation.py  visualization.py  visualization_traj.py
cython3/wpg/: base.pxd  base.py  combinedqp.pxd  combinedqp.py  helper.pxd  helper.py  interpolation.pxd  interpolation.py
cython_tests/test_class_pyx/: .gitignore  Makefile  embedded_main.cpp  fooClass.pyx  setup.py
data/: Input.txt
python2/: README.rst  classic_standalone.py  classic_vs_nmpc.py  main.py  nmpc_standalone.py  nmpc_vel_ref.py  plot.gnu  plot_data.py  plot_traj.py  setup.py  test2.py  test_QP.py
tests/: test_base.py  test_classic.py  test_combinedqp.py  test_generator.py  test_interpolation.py
tests/data/: README  (+4 more)
walking_generator/: base.py  base_init.py  base_origin.py  base_traj.py  classic.py  classic_generator.py  combinedqp.py  combinedqp_init.py  combinedqp_traj.py  helper.py  interpolation.py  interpolation_traj.py  utility.py  visualization.py  visualization_traj.py  walking_generator.py
(+17 files in other folders)
